; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp32s2beta/extr_sleep_modes.c_esp_get_deep_sleep_wake_stub.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp32s2beta/extr_sleep_modes.c_esp_get_deep_sleep_wake_stub.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock_rtc_memory_crc = common dso_local global i32 0, align 4
@RTC_MEMORY_CRC_REG = common dso_local global i32 0, align 4
@RTC_ENTRY_ADDR_REG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @esp_get_deep_sleep_wake_stub() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = call i32 @_lock_acquire(i32* @lock_rtc_memory_crc)
  %5 = load i32, i32* @RTC_MEMORY_CRC_REG, align 4
  %6 = call i64 @REG_READ(i32 %5)
  store i64 %6, i64* %2, align 8
  %7 = call i32 (...) @set_rtc_memory_crc()
  %8 = load i32, i32* @RTC_MEMORY_CRC_REG, align 4
  %9 = call i64 @REG_READ(i32 %8)
  store i64 %9, i64* %3, align 8
  %10 = load i32, i32* @RTC_MEMORY_CRC_REG, align 4
  %11 = load i64, i64* %2, align 8
  %12 = call i32 @REG_WRITE(i32 %10, i64 %11)
  %13 = call i32 @_lock_release(i32* @lock_rtc_memory_crc)
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* %3, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %0
  %18 = load i32, i32* @RTC_ENTRY_ADDR_REG, align 4
  %19 = call i64 @REG_READ(i32 %18)
  %20 = inttoptr i64 %19 to i32*
  store i32* %20, i32** %1, align 8
  br label %22

21:                                               ; preds = %0
  store i32* null, i32** %1, align 8
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i32*, i32** %1, align 8
  ret i32* %23
}

declare dso_local i32 @_lock_acquire(i32*) #1

declare dso_local i64 @REG_READ(i32) #1

declare dso_local i32 @set_rtc_memory_crc(...) #1

declare dso_local i32 @REG_WRITE(i32, i64) #1

declare dso_local i32 @_lock_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
